GNOME Bugzilla – Bug 688929
Fixes for the symbol-db search-view.
Last modified: 2013-08-15 17:43:36 UTC
See the attached patches.
Created attachment 229719 [details] [review] symbol-db: Use a vertical box for the search view. 9a2c4a1055c4c70294e1637f9d74da67d2034b88 erroneously changed it to a horizontal box.
Created attachment 229720 [details] [review] symbol-db: Use a GtkSearchEntry for the search entry in the search view. Also bump required gtk+ version to 3.6 since GtkSearchEntry is first available in that version.
Review of attachment 229719 [details] [review]: Sorry, my fault in a previous patch - thanks!
Review of attachment 229720 [details] [review]: Technically agreed but lets wait a moment until popular distros switched to 3.6.
Review of attachment 229720 [details] [review]: I have committed your patch, Carl. I think we have waited long enough, thanks.