symbol-db: Use a GtkSearchEntry for the search entry in the search view.

Also bump required gtk+ version to 3.6 since GtkSearchEntry is first available in that version.

https://bugzilla.gnome.org/show_bug.cgi?id=688929